Intro component avoids bottom toolbar on Mobile Safari

--- a/src/components/Intro/index.module.css
+++ b/src/components/Intro/index.module.css
@@ -15,7 +15,7 @@
 
 @media (--small) {
   .Intro {
-    padding: 18px 18px 31px 18px;
+    padding: 18px 18px 106px 18px;
   }
 }
 
